fix bug: content overflow

--- a/src/components/articles/article/article.module.scss
+++ b/src/components/articles/article/article.module.scss
@@ -10,7 +10,9 @@
   overflow: hidden;
 
   &__content {
-    flex-basis: 70%;
+    width: 70%;
+    overflow: hidden;
+    margin-right: 30px;
   }
 
   &__header {
@@ -23,6 +25,7 @@
     line-height: 28px;
     color: #366EFF;
     white-space: nowrap;
+    overflow: hidden;
     text-overflow: ellipsis;
   }
 
@@ -52,6 +55,9 @@
   border-radius: 2px;
   padding: 2px 5px;
   opacity: 0.75;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .user {
